# F3

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: unit_test.yml
deprecated_code/fff-encoding-wasm/: Cargo.toml  README.md
deprecated_code/fff-encoding-wasm/src/: lib.rs
deprecated_code/fff-ude-macros/: Cargo.toml
deprecated_code/fff-ude-macros/src/: lib.rs
deprecated_code/fff-wasm/: Cargo.toml  README.md  build.rs  compile_unpack_wasm.sh  fallback_scalar_aav_1024_uf1_unpack_src.cpp  test.cpp  test.wat  unpack.wat
deprecated_code/fff-wasm/src/: fls_wasm.rs  lib.rs
deprecated_code/fff-wasm/wasm-generated/: fls_example.wasm
doc/: paper_reproduction.md
exp_scripts/: build_wasm.sh  checksum.sh  decompression.sh  decompression_orc_cpp.sh  mem_iounit_size_nimble.sh  mem_orc.sh  mem_size.sh  nested.sh  projection.sh  projection_nimble.sh  projection_orc.sh  random_access.sh  wasm_micro_exp.sh
exp_scripts/deprecated/: layout_chunk_size.sh  layout_rg_size.sh
fff-bench/: CONFIG.md  Cargo.toml  README.md
fff-bench/.cargo/: config.toml
fff-bench/benches/: README.md  bench.rs  memory_cost.rs  multi_thread.rs  plot.ipynb  test_memory_size_perf.rs
fff-bench/examples/: README.md  alloc_test.rs  bench.rs  bench_dictscope.rs  bench_mem.rs  bench_mem_fff.rs  bench_mem_lance.rs  bench_mem_parquet.rs  bench_mem_vortex.rs  btrblocks_e2e_perf_test.rs  extra_copy_test.rs  func_call_test.rs  get_many_taxi_data.py  iounit_checksum.rs  lance_params_playground.rs  merge_parquet.rs  metadata_profile.rs  metadata_test.rs  metadata_test_v2.rs  nested_exp.rs  parsed_data.json  perf_test.rs  proj_laion.rs  random_access_gen_fff_local.rs  random_access_profile.rs  random_access_profile_lance.rs  rewrite_parquet.rs  synthetic_parquet_gen.rs  taxi_test.rs  test_expression_ser.rs  unzip.sh  wasm_benefit_pco.rs  wasm_compile_test.rs  wasm_decode_micro_exp.rs  wasm_e2e_perf_test.rs  wasm_ppd_test.rs
fff-bench/examples/datasets/: README
fff-bench/scripts/: analyze_compress_log.py
fff-bench/src/: bench_data.rs  config.rs  helper.rs  lib.rs
fff-bench/tests/: bench_tests.rs
fff-core/: Cargo.toml
fff-core/src/: errors.rs  lib.rs  macros.rs
fff-core/src/util/: bit_util.rs  buffer_to_array.rs  mod.rs
fff-encoding/: Cargo.toml  README.md
fff-encoding/src/: data_buffer.rs  enc_unit.rs  lib.rs
fff-encoding/src/schemes/: bp.rs  mod.rs  vortex.rs
fff-encoding/src/schemes/legacy/: cascade.rs  ffor.rs  null.rs  plain.rs
fff-format/: Cargo.toml  build.rs
fff-format/src/: File.rs  lib.rs
fff-poc/: Cargo.toml
fff-poc/src/: context.rs  counter.rs  dict.rs  lib.rs  options.rs  wasm_adapters.rs  writer.rs
fff-poc/src/common/: checksum.rs  mod.rs
fff-poc/src/compression/: mod.rs
fff-poc/src/decoder/: encunit.rs  legacy.rs  logical.rs  mod.rs  physical.rs
fff-poc/src/dict/: bottom_k_sketch.rs  dict_hash.rs  shared_dictionary.rs  shared_dictionary_cache.rs  shared_dictionary_context.rs
fff-poc/src/encoder/: custom.rs  encoded_column_chunk.rs  encunit.rs  logical.rs  mod.rs  physical.rs
fff-poc/src/file/: footer.rs
fff-poc/src/io/: reader.rs
fff-poc/src/reader/: builder.rs  legacy.rs  mod.rs  projection.rs  selection.rs  tests.rs
fff-poc/tests/: corrupted_file.rs  dict_share_multicol.rs  e2e.rs
fff-test-util/: Cargo.toml
fff-test-util/src/: lib.rs
fff-ude/: Cargo.toml
fff-ude-wasm/: Cargo.toml  README.md
fff-ude-wasm/examples/: test-alloc-wmemcheck.rs  test-compile-time.rs  test-link-wasm.rs  wasm.rs
fff-ude-wasm/src/: lib.rs  ram_file.rs  wasm_buffer.rs
fff-ude/src/: ffi.rs  kwargs.rs  lib.rs
format/: File.fbs  kwargs.md
results/: combined_nimble_projection_times.csv  combined_orc_projection_times.csv  combined_orc_read_times.csv  combined_orc_read_times_original_cpp.csv  cr.csv  decomp.csv  iounit_checksum-read.csv  iounit_checksum-write.csv  nimbleUncomp_read_times.csv  nimble_col_size_laion.csv  nimble_col_size_laion.txt  nimble_projection_times_no_loadSchema.csv  nimble_read_times.csv  nimble_read_times_0.csv  parquet_analysis.json  wasm_micro.csv  wasm_micro_debuginfo_optnone.csv  wasm_size.csv
results/lance_benchmark_results/: base_comparison.csv  data_cache_bytes_comparison.csv  max_page_bytes_comparison.csv  version_comparison.csv
results/rg_size_laion/: chunk_size_rg1048576.json  chunk_size_rg131072.json  chunk_size_rg262144.json  chunk_size_rg524288.json  chunk_size_rg65536.json
scripts/: collect_pq_stats.py  fetch.sh  first_8_col.py  install_flatc.sh  parquet_map_to_los.py  setup_debian.sh  tpch_dbgen.py  unique_deps.py  wat_collect.py
wasm-libs/adv-ude-fff/: Cargo.toml
wasm-libs/adv-ude-fff/src/: lib.rs
wasm-libs/fff-ude-example/: Cargo.toml  README.md
wasm-libs/fff-ude-example-buff/: Cargo.toml
wasm-libs/fff-ude-example-buff/src/: lib.rs
wasm-libs/fff-ude-example-custom/: Cargo.toml
wasm-libs/fff-ude-example-custom-encoder/: Cargo.toml
wasm-libs/fff-ude-example-custom-encoder/src/: lib.rs
wasm-libs/fff-ude-example-custom/src/: lib.rs
wasm-libs/fff-ude-example-fff/: Cargo.toml
wasm-libs/fff-ude-example-flsbp/: Cargo.toml
wasm-libs/fff-ude-example-fsst/: Cargo.toml
wasm-libs/fff-ude-example-fsst/src/: lib.rs
wasm-libs/fff-ude-example-gzip/: Cargo.toml
wasm-libs/fff-ude-example-lz4/: Cargo.toml
wasm-libs/fff-ude-example-memory-test/: Cargo.toml
wasm-libs/fff-ude-example-noop/: Cargo.toml
wasm-libs/fff-ude-example-pco/: Cargo.toml
wasm-libs/fff-ude-example-pco-real/: Cargo.toml
wasm-libs/fff-ude-example-pco-real-encoder/: Cargo.toml
wasm-libs/fff-ude-example-vortex/: Cargo.toml
wasm-libs/fff-ude-example-vortex/examples/: call_graph_test.rs
wasm-libs/fff-ude-example-vortex/src/: lib.rs
wasm-libs/fff-ude-example-zstd/: Cargo.toml
wasm-libs/fff-ude-example2/: Cargo.toml
wasm-libs/fff-ude-example2/.cargo/: config.toml
wasm-libs/fff-ude-example2/src/: lib.rs
wasm-libs/test-size/: Cargo.toml
wasm-libs/test-wmemcheck/: Cargo.toml
wasm-libs/wasm-test-encoders/: Cargo.toml
wasm-libs/wasm-test-encoders/src/: lib.rs
(+15 files in other folders)
