[package]
name = "fff-core"
version.workspace = true
edition.workspace = true

[dependencies]
arrow-schema = { workspace = true }
arrow-buffer = { workspace = true }
arrow-array = { workspace = true }
snafu = { workspace = true }
num = { version = "0.4", default-features = false }
bytes.workspace = true
vortex-error = { workspace = true }
bytemuck = { workspace = true }
lazy_static = { workspace = true }
object_store ={ workspace = true}
flatbuffers = { workspace = true }
anyhow = { workspace = true }